# noiseport-server

./: .env.example  .gitignore  .pre-commit-config.yaml  DOWNLOAD_TRACKING.md  Dockerfile  Dockerfile.slskd  Dockerfile.wizard  MAGICDNS_IMPLEMENTATION.md  MAGICDNS_IMPLEMENTATION_COMPLETE.md  MAGICDNS_VERIFICATION_REPORT.md  Makefile  README.md  VPN_ACCESS_GUIDE.md  beet_config_full_refresh.yaml  docker-compose.dev.yml  docker-compose.full.yml.template  docker-compose.full.yml.template.backup  docker-compose.headscale.yml  docker-compose.stack.yml.template  docker-compose.wizard.dev.yml  docker-compose.wizard.yml  docker-compose.yml  docker-compose.yml.backup  package-lock.json  package.json  pyproject.toml  sandbox.py  verify-magicdns.sh
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/api/: __init__.py  config.py  downloads.py  stats.py  system.py  uploads.py
app/core/: __init__.py  app.py  error_handlers.py  exceptions.py  logging.py
app/database/: __init__.py  connection.py  models.py
app/models/: __init__.py  config.py  schemas.py
app/services/: __init__.py  compose_runner.py  download_request_service.py  headscale_service.py  slskd_service.py
config/: settings.py
config/caddy/: Caddyfile.template
config/headscale/: README.md  config.yaml.template
docs/: MAGICDNS_NETWORK_CONFIGURATION.md  METADATA_AUTO_DETECTION.md  UPLOAD_FRONTEND_GUIDE.md  UPLOAD_IMPLEMENTATION_SUMMARY.md  VPN_ACCESS_GUIDE.md  upload_test.html
frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ServiceInfo.tsx  SetupWizard.tsx
frontend/src/components/steps/: FeaturesStep.tsx  HeadscaleStep.tsx  LocalLibrariesStep.tsx  MusicPathsStep.tsx  SoulseekStep.tsx  SpotifyStep.tsx  SummaryStep.tsx  TailscaleStep.tsx  TailscaleStep.tsx.backup
frontend/src/components/ui/: index.tsx
frontend/src/data/: services.tsx
frontend/src/hooks/: useWizardConfig.ts
frontend/src/types/: wizard.ts
frontend/src/utils/: api.ts
scripts/: setup.sh
shared/: SOLUTION_SUMMARY.md  TAGGING_IMPROVEMENTS.md  TESTING_GUIDE.md  beet_config_album.yaml
shared/.config/beets/: state.pickle
shared/scripts/: README.md  import_album.sh  tag_after_import.sh  tag_album_imported.sh  tag_album_post_import.sh  verify_album_tagging.sh
slskd/: slskd.yml  slskd.yml.template
tests/: conftest.py  test_api.py  test_config.py  test_download_metadata.py  test_download_tracking.py  test_headscale_service.py  test_integration.py  test_models.py  test_upload_endpoint.py
tests/shell_scripts/: test_tagging_concurrent.sh
wizard-config/: README.md
