[project]
name = "downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "discogs-client>=2.3.0",
    "fastapi[standard]>=0.117.1",
    "pylast>=5.5.0",
    "requests>=2.32.5",
    "slskd-api>=0.1.5",
    "uvicorn[standard]>=0.37.0",
    "websocket-client>=1.8.0",
]
